--- a/app-deployement.yaml
+++ b/app-deployement.yaml
@@ -20,6 +20,8 @@ spec:
           env:
             - name: MONGO_URL
               value: "mongodb://username:password@mongodb:27017" # Update with your MongoDB connection details
+            - name: KUBERNETES_ENV
+              value: "true"
 ---
 apiVersion: v1
 kind: Service
