--- a/app-deployement.yaml
+++ b/app-deployement.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
         - name: express-app
           image: pfa123/pfa1.0:latest
+          envFrom:
+         - configMapRef:
+          name: mongodb-config
           ports:
             - containerPort: 3000
           env:
