--- a/app-deployement.yaml
+++ b/app-deployement.yaml
@@ -30,7 +30,7 @@ metadata:
 spec:
   selector:
     app: express-app
-  type: LoadBalancer
+  type: NodePort
   ports:
     - protocol: TCP
       port: 80
