--- a/mongo.yaml
+++ b/mongo.yaml
@@ -36,12 +36,42 @@ spec:
   - metadata:
       name: mongo-data
     spec:
-      accessModes: [ "ReadWriteOnce" ]
+      accessModes: 
+        - ReadWriteOnce
       resources:
         requests:
           storage: 1Gi
 
---- #another file (u can put 2 config docs in same file in .yaml)
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mongo-pv
+spec:
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: manual
+  hostPath:
+    path: "C:\data\db" # Change this to the actual host path where you want to persist data
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-data
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+  storageClassName: manual
+  volumeName: mongo-pv
+
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -53,14 +83,3 @@ spec:
     - protocol: TCP
       port: 27017
       targetPort: 27017
----
-kind: Endpoints
-apiVersion: "v1"
-metadata:
-  name: 
-  namespace: external
-subsets: 
-- addresses:
-  - ip: " 10.96.7.77"
-  ports:
-    port: 27017
